# HAB

./: .gitignore  HAB_LaunchOrientation.html  README.md
balloon/: watchdog.sh
balloon/camera/: gopro-hacking.txt
balloon/camera/camerainterface/src/: GoProInterface.py  ImageWatcher.py  pub_server.py  sub_client.py
balloon/camera/imageprocessing/: .gitignore  CMakeLists.txt  arm-gnueabi.toolchain.cmake
balloon/camera/imageprocessing/opencv/: jenkins_script.txt
balloon/camera/imageprocessing/src/imageprocessing/: CMakeLists.txt  imageprocessor.cpp  imageprocessor.hpp
balloon/camera/imageprocessing/src/logging/: CMakeLists.txt  logging.cpp  logging.hpp
balloon/camera/imageprocessing/src/main/: CMakeLists.txt  main.cpp
balloon/camera/imageprocessing/src/main/cpp/: main.cpp
balloon/camera/imageprocessing/src/main/cpp/imageprocessing/: imageprocessor.cpp  imageprocessor.hpp
balloon/camera/imageprocessing/src/main/cpp/logging/: logging.cpp  logging.hpp
balloon/camera/imageprocessing/src/test/: CMakeLists.txt  test_file.cpp  testmain.cpp
balloon/camera/imageprocessing/src/test/cpp/: test.cpp  test.cpp~  test_file.cpp
balloon/camera/imageprocessing/src/test/resources/: generate_scenarios_files.py  generate_tests.py  scenarios.txt
balloon/communication/: NTX2_Transmitter.py  image_subscriber.py  rtty_transmitter.py  ssdv.py  subscriber.py  telemetry_packet.py
balloon/sensors/: BB-BONE-GPS-GPRS.py  BMP180_Pressure.py  HTU21D_Humidity.py  MPL3115_Pressure.py  NTX2_434_transmitter.py  Sensor_test.py  Start_Sensors.sh
balloon/zeromq/: simple_broker.py
balloon/zeromq/src/main/cpp/: CMakeLists.txt
balloon/zeromq/src/main/python/: message_broker.py
balloon/zeromq/src/test/cpp/: CMakeLists.txt  main.cpp  publisher.cpp  subscriber.cpp
balloon/zeromq/src/test/python/: .gitignore  image_publisher.py  image_subscriber.py  publisher.py  pubsubber.py  subscriber.py  topicDataLogger.py  zmq_sensor_stub.py
uploader/: fldigi_connector.py  sentence_parser.py  telemetry_receiver.py  telemetry_uploader.py  upload_tester.py
uploader/telemetry-test-generator/: README  telemetry-gen.py  telemetry_server.py  test-data.txt
website/: .htaccess  config.php  index.html  index.html.old  index.php  tracker.html
website/backend/: cartracking.php  cleardatabase.php  fakedata.php  measurement.php  photo.php  predictPath_fakedata.php  realtime.php  telemetry.php
website/frontend/: about.html  index - Copy.html
website/frontend/img/: Thumbs.db
website/frontend/js/: hab.js
website/inc/: config.php  mysqlDb.php
website/js/: ng-hab.js
website/templates/frontend/: about.tpl  base.tpl  header.tpl  home.tpl  index.tpl  navigation.tpl  tracker.tpl
